PHPSG-6 - Fixed alignment on menu navigation

--- a/plugins/OpenEmis/webroot/css/layout.rtl.css
+++ b/plugins/OpenEmis/webroot/css/layout.rtl.css
@@ -819,6 +819,10 @@ html {
         margin: 0 0 0 0;
         float: right;
     }
+
+    .rtl #sidebar-wrapper {
+        top: 23px;
+    }    
 }
 
 @media(max-width: 585px) {
